adjust DisabledSchemaValidationTest